--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -113,7 +113,7 @@
   },
   "about": {
     "title": "About Credit Cauldron",
-    "description": "Credit Cauldron (Horcrux 2.0) is a rural micro-loan verification platform promoting fair and transparent credit for underserved communities.",
+    "description": "Credit Cauldron is a rural micro-loan verification platform promoting fair and transparent credit for underserved communities.",
     "mission": "Our Mission",
     "missionText": "We connect rural borrowers with trusted lenders, ensuring transparent interest rates (maximum 20% per annum) and fair access to credit.",
     "features": "Key Features",
